<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WechatShareEditor</string>
    <string name="title">Title</string>
    <string name="hint">Leave blank no changes</string>
    <string name="img_url">Image Url</string>
    <string name="src_usr">Source Username</string>
    <string name="src_dusr">Source Display Username</string>
    <string name="upload_link">Upload Link</string>
    <string name="upload_width">Upload Width</string>
    <string name="upload_height">Upload Height</string>
    <string name="upload_source">Upload Source</string>
    <string name="confirm">Save</string>
    <string name="toast">Saved. Please enter Wechat to actually repost a link, the module won\'t post it for you.</string>
    <string name="launch_wechat">Launch Wechat</string>
    <string name="feedback">--By Lechao Diwu\nFeedback: diwulechao@163.com</string>
    <string name="wechatnotfound">Wechat can not be found!</string>
    <string name="location_latitude">Latitude(real)</string>
    <string name="location_longitude">Longitude(real)</string>
	<string name="location_hint">Keep GPS close when publish</string>
</resources>