<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/tip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/title" />

                <EditText
                    android:id="@+id/title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint"
                    android:textSize="@dimen/edit_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/tip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/img_url" />

                <EditText
                    android:id="@+id/image_url"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint"
                    android:textSize="@dimen/edit_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/tip_width"
                    android:layout_height="40dp"
                    android:text="@string/src_usr" />

                <EditText
                    android:id="@+id/source_username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint"
                    android:textSize="@dimen/edit_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/tip_width"
                    android:layout_height="40dp"
                    android:text="@string/src_dusr" />

                <EditText
                    android:id="@+id/source_display_username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint"
                    android:textSize="@dimen/edit_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/tip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_link" />

                <EditText
                    android:id="@+id/upload_link"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint"
                    android:textSize="@dimen/edit_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/tip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_width" />

                <EditText
                    android:id="@+id/upload_width"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint"
                    android:inputType="number"
                    android:textSize="@dimen/edit_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/tip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_height" />

                <EditText
                    android:id="@+id/upload_height"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint"
                    android:inputType="number"
                    android:textSize="@dimen/edit_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/tip_width"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_source" />

                <EditText
                    android:id="@+id/upload_source"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint"
                    android:inputType="number"
                    android:textSize="@dimen/edit_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm"
                    android:textSize="@dimen/edit_text_size" />

                <Button
                    android:id="@+id/launch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/launch_wechat"
                    android:textSize="@dimen/edit_text_size" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:textSize="@dimen/edit_text_size" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>